adding units tests and integration tests